Sun Jun 13 00:23:04 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tcltklib/extconf.rb: [EXPERIMENTAL] MacOS X (darwin) support

	* ext/tcltklib/tcltklib.c: fix thread trouble on callback proc, and
	                   eliminate warning about instance variable access

	* ext/tk/lib/tk/menubar.rb: improve supported menu_spec

	* ext/tk/lib/tk/menuspec.rb: [add] menu_spec support library

	* ext/tk/lib/tk/root.rb: add menu_spec support

	* ext/tk/lib/tk/text.rb: bug fix

	* ext/tk/lib/tk/toplevel.rb: add menu_spec support

	* ext/tk/sample/menubar?.rb: [add] sample of menu_spec usage

Sat Jun 12 14:15:20  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* dir.c: RDOC for File::FNM_CASEFOLD was missed.

Sat Jun 12 11:15:53 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in (target_os): strip -gnu suffix on Linux.

Fri Jun 11 22:08:50 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c: remove #indexes, #indices.

	* hash.c: ditto.

	* ext/dbm/dbm.c: remove #indexes, #indices, "values_at" warning
	  from #select.

	* ext/gdbm/gdbm.c: ditto.

	* ext/sdbm/init.c: ditto.

	* ext/dbm/dbm.c (Init_dbm): set VERSION constant as "unknown" when
	  DB_VERSION_STRING is not available.

Thu Jun 10 19:19:41 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/sdbm/init.c (fsdbm_store): sdbm should use StringValue().
	  [ruby-talk:103062]

Wed Jun  9 16:09:01 2004  akira yamada  <akira@ruby-lang.org>

	* lib/uri/generic.rb (URI::Generic::merge,
	  URI::Generic::route_from): accepts non-hierarchical URI.
	  [ruby-dev:23631]
	
	* test/uri/test_generic.rb (TestGeneric::test_route,
	  TestGeneric::test_merge): added tests for above changes.

Wed Jun  9 15:39:55 2004  Akinori MUSHA  <knu@iDaemons.org>

	* configure.in: Add support for DragonFly BSD.

Wed Jun  9 15:07:06 2004  Akinori MUSHA  <knu@iDaemons.org>

	* config.guess, config.sub: Update to a more recent version as of
	  2004-01-20.

Wed Jun  9 11:20:05 2004  NAKAMURA Usaku  <usa@ruby-lang.org>
